--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                         <h1 class="home_title" id="user-detail-name">Hi👋, I'm<br>Anshul Agrawal</h1>
                         <h3 class="home_subtitle"><span class="auto-type"></span></h3>
                         <p class="home_description">Full-stack developer specializing in backend development
-                            using Node.js and related frameworks. Experienced in
+                            using Express.js and related frameworks. Experienced in
                             designing and maintaining high-quality server-side
-                            applications and RESTful APIs. Proficient in JavaScript,
+                            applications and RESTful APIs. Proficient in Node.js,
                             MongoDB, Express.js, GIT with good knowledge of front-end
-                            technologies (HTML, CSS, React, Redux). Strong problem-solving
+                            technologies (HTML, CSS, JavaScript, React, Redux). Strong problem-solving
                             skills and a solid foundation in data structures and
                             algorithms.</p>
                         <div class="btn_container">
@@ -168,11 +168,11 @@
                 <div class="about_data">
 
                     <p  class="about_description"  id="user-detail-intro">Full-stack developer specializing in backend development
-                        using Node.js and related frameworks. Experienced in
+                        using Express.js and related frameworks. Experienced in
                         designing and maintaining high-quality server-side
-                        applications and RESTful APIs. Proficient in JavaScript,
+                        applications and RESTful APIs. Proficient in Node.js,
                         MongoDB, Express.js, GIT with good knowledge of front-end
-                        technologies (HTML, CSS, React, Redux). Strong problem-solving
+                        technologies (HTML, CSS, JavaScript, React, Redux). Strong problem-solving
                         skills and a solid foundation in data structures and
                         algorithms.
                     </p>
@@ -222,7 +222,7 @@
                             <div class="qualification_data">
                                 <div>
 
-                                    <h3 class="qualification_title">Full Stack Web Development</h3>
+                                    <h3 class="qualification_title">Full Stack Web Development Course</h3>
                                     <span class="qualification_subtitle">Prepleaf by Masai, Bengaluru</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
@@ -307,7 +307,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Node.js</h3>
-                                    <span><i class="bx bxl-java skills-card-img"></i></span>
+                                    <span></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -317,7 +317,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Express.js</h3>
-                                    <span><i class='bx bxl-spring-boot skills-card-img'></i></span>
+                                    <span></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -327,7 +327,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">MongoDB</h3>
-                                    <span><i class='bx bxs-data skills-card-img'></i></span>
+                                    <span><i class='bx bxl-mongodb skills-card-img'></i></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -382,7 +382,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">React</h3>
-                                    <span><i class='bx bxl-javascript skills-card-img'></i></span>
+                                    <span><i class='bx bxl-react skills-card-img'></i></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -392,7 +392,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Redux</h3>
-                                    <span><i class='bx bxl-javascript skills-card-img'></i></span>
+                                    <span><i class='bx bxl-redux skills-card-img'></i></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -440,7 +440,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">PostMan</h3>
-                                    <span><i class='bx bxs-pen skills-card-img'></i></span>
+                                    <span></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -459,7 +459,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Prompt Engineering</h3>
-                                    <span><i class="fa-solid fa-certificate skills-card-img"></i></span>
+                                    <span></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -483,7 +483,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Canva</h3>
-                                    <span class="skills-card-img"></span>
+                                    <span></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -492,7 +492,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Flow CV</h3>
-                                    <span class="skills-card-img"></span>
+                                    <span></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -693,7 +693,7 @@
                     </div>
                 </div>
                 <div>
-                    <p class="footer_copy">Made with ❤️ by Anshul </p>
+                    <p class="footer_copy">Made by Anshul </p>
                                 </div>
             </div>
         </div>
