changed home desc

--- a/index.html
+++ b/index.html
@@ -129,14 +129,9 @@
                     <div class="home_data">
                         <h1 class="home_title" id="user-detail-name">Hi👋, I'm<br>Anshul Agrawal</h1>
                         <h3 class="home_subtitle"><span class="auto-type"></span></h3>
-                        <p class="home_description">Full-stack developer specializing in backend development
-                            using Express.js and related frameworks. Experienced in
+                        <p class="home_description">MERN stack developer specializing in backend development. Experienced in
                             designing and maintaining high-quality server-side
-                            applications and RESTful APIs. Proficient in Node.js,
-                            MongoDB, Express.js, GIT with good knowledge of front-end
-                            technologies (HTML, CSS, JavaScript, React, Redux). Strong problem-solving
-                            skills and a solid foundation in data structures and
-                            algorithms.</p>
+                            applications and RESTful APIs.</p>
                         <div class="btn_container">
                             <a href="#contact" class="button button-flex sec_button">
                                 Connect with Me <i class="uil uil-message button_icon"></i>
@@ -174,7 +169,8 @@
                         MongoDB, Express.js, GIT with good knowledge of front-end
                         technologies (HTML, CSS, JavaScript, React, Redux). Strong problem-solving
                         skills and a solid foundation in data structures and
-                        algorithms.
+                        algorithms. Ability to collaborate well with cross-functional
+                        teams. Proactive and self-driven.                        
                     </p>
                     <div class="about_info">
                         <div>
@@ -652,9 +648,7 @@
                         <button class="button button-flex" type="submit">Send Message
                             <i class="uil uil-message button_icon"></i>
                         </button>
-                    </div>
-
-                    
+                    </div> 
                 </form>
 
                 <!DOCTYPE html>
@@ -667,7 +661,7 @@
 </body>
 </html>
 
-            </div>
+        </div>
         </section>
         <hr class="hr_break_line">
 
@@ -694,7 +688,7 @@
                 </div>
                 <div>
                     <p class="footer_copy">Made by Anshul </p>
-                                </div>
+                </div>
             </div>
         </div>
     </footer>
