--- a/index.html
+++ b/index.html
@@ -629,15 +629,15 @@
                 </div>
 
 
-                <form action="https://formspree.io/f/xaygoprz" method="POST" class="contact_form grid">
+                <form action="https://formspree.io/f/mwkgqnlo" method="POST" class="contact_form grid">
                     <div class="contact_inputs grid">
                         <div class="contact_content">
-                            <label for="name" class="contact_label">Name</label>
+                            <label for="name" class="contact_label">Your Name</label>
                             <input name="name" type="text" id="name" class="contact_input">
                         </div>
                         <div class="contact_content">
-                            <label for="email" class="contact_label">Email</label>
-                            <input name="email" id="email"type="email" class="contact_input" required>
+                            <label for="email" class="contact_label">Your Email</label>
+                            <input name="email" id="email" type="email" class="contact_input" required>
                         </div>
                     </div>
                     <div class="contact_content">
@@ -645,7 +645,7 @@
                         <textarea name="message" id="" cols="0" rows="7" class="contact_input"></textarea>
                     </div>
                     <div>
-                        <button class="button button-flex" type="submit">Send Message
+                        <button class="button button-flex" type="submit">Send
                             <i class="uil uil-message button_icon"></i>
                         </button>
                     </div> 
