--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                     </div>
                 </div>
                 <div>
-                    <p class="footer_copy">Made by Anshul </p>
+                    <p class="footer_copy">Made with love </p>
                 </div>
             </div>
         </div>
