--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                     <span class="qualification_subtitle">Prepleaf by Masai, Bengaluru</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
-                                        [ June 2023 - June 2024 ]
+                                        [ June 2023 - Present ]
                                     </div>
                                 </div>
                                 <div>
@@ -242,7 +242,7 @@
                                     <span class="qualification_subtitle">Shri Govindram Seksaria Institute of Technology and Science, Indore, Madhya Pradesh</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
-                                        [July 2018 - July 2020(Drop out)]
+                                        [ July 2018 - June 2020 ]
                                     </div>
                                 </div>
                             </div>
@@ -256,11 +256,11 @@
                             <div class="qualification_data">
 
                                 <div>
-                                    <h3 class="qualification_title"> </h3>
-                                    <span class="qualification_subtitle"> Bhopal, Madhya Pradesh</span>
+                                    <h3 class="qualification_title"> Manager </h3>
+                                    <span class="qualification_subtitle"> Ind Supply Corporation, Bhopal, Madhya Pradesh</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
-                                        [July 2020 - June 2023]
+                                        [ Aug 2020 - Oct 2023 ]
                                     </div>
                                 </div>
                                 <div>
@@ -685,9 +685,6 @@
                         </a>
                         
                     </div>
-                </div>
-                <div>
-                    <p class="footer_copy">Made with love </p>
                 </div>
             </div>
         </div>
