--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <li class="nav_item">
                         <button id="resume-button-1" class="nav-link resume">
                             <a href="./Images/AnshulAgrawal-FullStackWebDeveloper.pdf" class="button-flex" id="resume-link-1"
-                            onclick="window.open('https://drive.google.com/file/d/16hqyJYKBuzLq4XNtmscqZJLm1O8Tp5gu/view?usp=sharing')"
+                            onclick="window.open('https://drive.google.com/file/d/19HGR3I59nKI0q9JItUOL4p91iM6C54Z1/view?usp=sharing')"
                             target="_blank" download="Anshul-Agrawal-FullStackWebDeveloper-Resume.pdf" >
                                 <i class="uil uil-download-alt nav_icon"></i> Resume
                             </a>
@@ -190,7 +190,7 @@
                     <div class="about_buttons">
                         <button class="button" id="resume-button-2">
                             <a href="./Images/AnshulAgrawal-FullStackWebDeveloper.pdf" class="button-flex" id="resume-link-2"
-                                onclick="window.open('https://drive.google.com/file/d/16hqyJYKBuzLq4XNtmscqZJLm1O8Tp5gu/view?usp=sharing')"
+                                onclick="window.open('https://drive.google.com/file/d/19HGR3I59nKI0q9JItUOL4p91iM6C54Z1/view?usp=sharing')"
                                 target="_blank" download="Anshul-Agrawal-FullStackWebDeveloper-Resume.pdf">
                                 My Resume <i class="uil uil-download-alt button_icon"></i>
                             </a>
@@ -256,7 +256,7 @@
                             <div class="qualification_data">
 
                                 <div>
-                                    <h3 class="qualification_title"> Manager </h3>
+                                    <h3 class="qualification_title"> Junior Manager </h3>
                                     <span class="qualification_subtitle"> Ind Supply Corporation, Bhopal, Madhya Pradesh</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
