--- a/index.html
+++ b/index.html
@@ -165,16 +165,15 @@
                     <p  class="about_description"  id="user-detail-intro">Full-stack developer specializing in backend development
                         using Express.js and related frameworks. Experienced in
                         designing and maintaining high-quality server-side
-                        applications and RESTful APIs. Proficient in Node.js,
-                        MongoDB, Express.js, GIT with good knowledge of front-end
-                        technologies (HTML, CSS, JavaScript, React, Redux). Strong problem-solving
-                        skills and a solid foundation in data structures and
-                        algorithms. Ability to collaborate well with cross-functional
+                        applications and RESTful APIs. Proficient in JavaScript, Node.js,
+                        MongoDB, Express.js, GIT. Strong problem-solving
+                        skills along with a solid foundation in data structures and
+                        algorithms. Ability to collaborate effectively with cross-functional
                         teams. Proactive and self-driven.                        
                     </p>
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title">2000+</span>
+                            <span class="about_info-title">2100+</span>
                             <span class="about_info-name">Hours of Coding</span>
                         </div>
                         <div>
@@ -242,7 +241,7 @@
                                     <span class="qualification_subtitle">Shri Govindram Seksaria Institute of Technology and Science, Indore, Madhya Pradesh</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
-                                        [ July 2018 - June 2021 ]
+                                        [ July 2018 - June 2020 ]
                                     </div>
                                 </div>
                             </div>
@@ -260,7 +259,7 @@
                                     <span class="qualification_subtitle"> Ind Supply Corporation, Bhopal, Madhya Pradesh</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
-                                        [ Aug 2021 - Oct 2023 ]
+                                        [ Aug 2020 - Oct 2023 ]
                                     </div>
                                 </div>
                                 <div>
@@ -453,6 +452,16 @@
                                 </div>
                             </div>
 
+                            <div class="skills_data skills-card">
+                                <div class="skills_titles">
+                                    <h3 class="skills_name skills-card-name">CodeSandBox</h3>
+                                    <span><i class='bx bxl-codesandbox skills-card-img'></i></span>
+                                </div>
+                                <div class="skills_bar">
+                                    <span class="skills_percentage"></span>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -470,15 +479,6 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Canva</h3>
-                                    <span></span>
-                                </div>
-                                <div class="skills_bar">
-                                    <span class="skills_percentage"></span>
-                                </div>
-                            </div>
-                            <div class="skills_data skills-card">
-                                <div class="skills_titles">
-                                    <h3 class="skills_name skills-card-name">Flow CV</h3>
                                     <span></span>
                                 </div>
                                 <div class="skills_bar">
