--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         MongoDB, Express.js, GIT. Strong problem-solving
                         skills along with a solid foundation in data structures and
                         algorithms. Ability to collaborate effectively with cross-functional
-                        teams. Proactive and self-driven.                        
+                        teams. Proactive and self-driven, eager to contribute to a dynamic working environment.                       
                     </p>
                     <div class="about_info">
                         <div>
