changed profile photo

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                 129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                 -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image x="10" y="1" class="home_blob-img" href="./Images/anshul profile_photo.jpg" />
+                                <image x="10" y="1" class="home_blob-img" href="./Images/Anshul Agrawal profile photo.jpg" />
                             </g>
                         </svg>
                     </div>
@@ -302,7 +302,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Node.js</h3>
-                                    <span></span>
+                                    <span><i class='bx bxl-javascript skills-card-img'></i></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -312,7 +312,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Express.js</h3>
-                                    <span></span>
+                                    <span><i class='bx bxl-javascript skills-card-img'></i></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -434,28 +434,8 @@
 
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
-                                    <h3 class="skills_name skills-card-name">PostMan</h3>
-                                    <span></span>
-                                </div>
-                                <div class="skills_bar">
-                                    <span class="skills_percentage"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills_data skills-card">
-                                <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">CodePen</h3>
                                     <span><i class='bx bxl-codepen skills-card-img'></i></span>
-                                </div>
-                                <div class="skills_bar">
-                                    <span class="skills_percentage"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills_data skills-card">
-                                <div class="skills_titles">
-                                    <h3 class="skills_name skills-card-name">CodeSandBox</h3>
-                                    <span><i class='bx bxl-codesandbox skills-card-img'></i></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
