changed project section

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             </div>
 
             
-             <div class="portfolio_content grid project-card">
+             <!-- <div class="portfolio_content grid project-card">
                 <img src="./Images/Asos Clothes.png" alt="rodan" class="portfolio_img">
 
                 <div class="portfolio_data">
@@ -517,7 +517,7 @@
                         <i class="uil uil-external-link-alt button_icon"></i>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
         <hr class="hr_break_line">
 
