--- a/index.html
+++ b/index.html
@@ -329,6 +329,16 @@
                                 </div>
                             </div>
 
+                            <div class="skills_data skills-card">
+                                <div class="skills_titles">
+                                    <h3 class="skills_name skills-card-name">Mongoose</h3>
+                                    <span><i class='bx bxl-mongodb skills-card-img'></i></span>
+                                </div>
+                                <div class="skills_bar">
+                                    <span class="skills_percentage"></span>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -434,6 +444,16 @@
 
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
+                                    <h3 class="skills_name skills-card-name"> Netlify </h3>
+                                    <span><i class='bx bxl-netlify skills-card-img'></i></span>
+                                </div>
+                                <div class="skills_bar">
+                                    <span class="skills_percentage"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills_data skills-card">
+                                <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">CodePen</h3>
                                     <span><i class='bx bxl-codepen skills-card-img'></i></span>
                                 </div>
@@ -441,7 +461,7 @@
                                     <span class="skills_percentage"></span>
                                 </div>
                             </div>
-
+                            
                         </div>
                     </div>
 
