--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
             </div>
             
             <span  class="section_subtitle">Github Calendar</span>
-            <div  class="react-activity-calendar calendar">
-                   <img style="width: 100%;" src="https://ghchart.rshah.org/AnshulAgrawal999" alt="">
+            <div  class="react-activity-calendar" style="text-align:center;" >
+                   <img style="width: 75%;" src="https://ghchart.rshah.org/AnshulAgrawal999" alt="">
             </div>
 
 
