--- a/index.html
+++ b/index.html
@@ -129,9 +129,11 @@
                     <div class="home_data">
                         <h1 class="home_title" id="user-detail-name">Hi👋, I'm<br>Anshul Agrawal</h1>
                         <h3 class="home_subtitle"><span class="auto-type"></span></h3>
-                        <p class="home_description">MERN stack developer specializing in backend development. Experienced in
+                        <p class="home_description">Highly motivated Full Stack Web Developer with specialization in MERN Stack. Experienced in
                             designing and maintaining high-quality server-side
-                            applications and RESTful APIs.</p>
+                            applications and RESTful APIs. Proficient in JavaScript, Node.js,
+                            MongoDB, Express.js, GIT. Strong problem-solving skills along with a solid foundation in data structures and
+                            algorithms.</p>
                         <div class="btn_container">
                             <a href="#contact" class="button button-flex sec_button">
                                 Connect with Me <i class="uil uil-message button_icon"></i>
@@ -162,14 +164,14 @@
                 <img src="./Images/2.png" alt="" class="about_img home-img">
                 <div class="about_data">
 
-                    <p  class="about_description"  id="user-detail-intro">Full-stack developer specializing in backend development
+                    <p  class="about_description"  id="user-detail-intro">I am a Full Stack Web developer with expertise in backend development
                         using Express.js and related frameworks. Experienced in
                         designing and maintaining high-quality server-side
                         applications and RESTful APIs. Proficient in JavaScript, Node.js,
-                        MongoDB, Express.js, GIT. Strong problem-solving
-                        skills along with a solid foundation in data structures and
+                        MongoDB, Express.js, GIT. Strong problem-solving skills along with a solid foundation in data structures and
                         algorithms. Ability to collaborate effectively with cross-functional
-                        teams. Proactive and self-driven, eager to contribute to a dynamic working environment.                       
+                        teams. Proactive and self-driven, eager to contribute to a dynamic working environment. My journey includes an intensive 1200+ Hour Web Development program at Prepleaf by Masai School, where I honed my skills in frontend and backend development.   
+                        I have a knack for implementing innovative solutions and thrive in collaborative environments. My meticulous attention to detail and passion for problem-solving are key drivers that set me apart in the field.                    
                     </p>
                     <div class="about_info">
                         <div>
@@ -701,9 +703,9 @@
 </script>
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["Full Stack Developer"],
-            typeSpeed: 50,
-            backSpeed: 50,
+            strings: ["Full Stack Web Developer", "Problem Solver", "Innovative Thinker", "Team Player"],
+            typeSpeed: 120,
+            backSpeed: 60,
             loop: true,
         });
     </script>
