--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             <div class="statistics_container container grid">
 
                 <img id="github-stats-card"
-                    src="https://github-readme-stats.vercel.app/api?username=AnshulAgrawal999"
+                    src="https://github-readme-stats-salesp07.vercel.app/api?username=AnshulAgrawal999&count_private=true&show_icons=true&theme=city_light&rank_icon=github"
                     alt="github-stats-card">
             
                 <img id="github-top-langs"
@@ -667,7 +667,7 @@
                 <div class="footer_container container grid">
                     <div>
                         <h1 class="footer_title">Anshul Agrawal</h1>
-                        <span class="footer_subtitle">Full Stack Developer</span>
+                        <span class="footer_subtitle">Full Stack Web Developer</span>
                     </div>
                     <div class="footer_socials">
                         <a href="https://github.com/AnshulAgrawal999" target="_blank" class="footer_social">
