--- a/index.html
+++ b/index.html
@@ -499,18 +499,18 @@
             <h2 class="section_title"> Projects </h2>
 
             <div class="portfolio_content grid project-card">
-                <img src="./Images/Asos Clothes.png" alt="rodan" class="portfolio_img">
+                <img src="./Images/homepage.png" alt="rodan" class="portfolio_img">
 
                 <div class="portfolio_data">
-                    <h3 class="portfolio_title project_title project-title">Asos Clothes</h3>
-                    <p class="portfolio_description project-description">Asos Clothes is a clothing website designed to provide a seamless online shopping experience.</p>
-                    <p class="project-tech-stack"><b>Tech Stack : </b>React | Redux | Node | Express | MongoDB</p>
-                    <a href="https://github.com/AnshulAgrawal999/asos-Clothes" target="_blank"
+                    <h3 class="portfolio_title project_title project-title">My Notes App</h3>
+                    <p class="portfolio_description project-description">The My Notes App simplifies the task of creating and managing personalized notes, offering users a user-friendly interface for efficient note-taking.</p>
+                    <p class="project-tech-stack"> <b>Tech Stack : </b>React | Redux | Nodejs | Express | MongoDB </p>
+                    <a href="https://github.com/AnshulAgrawal999/My-Notes-App" target="_blank"
                         class="project-github-link button button-flex button-small portfolio_button">
                         GitHub
                         <i class="uil uil-github-alt button_icon"></i>
                     </a>
-                    <a href="https://salmon-snapper-robe.cyclic.app/" target="_blank"
+                    <a href="https://my-fullstack-notes-app.netlify.app/" target="_blank"
                         class="button button-flex button-small portfolio_button project-deployed-link">
                         Live Demo 
                         <i class="uil uil-external-link-alt button_icon"></i>
