--- a/index.html
+++ b/index.html
@@ -499,8 +499,10 @@
             <h2 class="section_title"> Projects </h2>
 
             <div class="portfolio_content grid project-card">
+                <a href="https://my-fullstack-notes-app.netlify.app/" target="_blank" >
                 <img src="./Images/homepage.png" alt="rodan" class="portfolio_img">
-
+                </a>
+                
                 <div class="portfolio_data">
                     <h3 class="portfolio_title project_title project-title">My Notes App</h3>
                     <p class="portfolio_description project-description">The My Notes App simplifies the task of creating and managing personalized notes, offering users a user-friendly interface for efficient note-taking.</p>
