--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
                     <div class="home_data">
-                        <h1 class="home_title" id="user-detail-name">Hi👋, I'm<br>Anshul Agrawal</h1>
+                        <h1 class="home_title" id="user-detail-name">Hi👋, I'm Anshul Agrawal</h1>
                         <h3 class="home_subtitle"><span class="auto-type"></span></h3>
                         <p class="home_description">Highly passionate Full Stack Web Developer skilled in MERN Stack with expertise in backend development using Express.js 
                             and related frameworks. Experienced in designing and maintaining high-quality server-side
@@ -306,7 +306,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">HTML</h3>
-                                    <span><i class='bx bxl-html5 skills-card-img'></i></span>
+                                    <span>  <img src="https://skillicons.dev/icons?i=html" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -316,7 +316,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">CSS</h3>
-                                    <span><i class='bx bxl-css3 skills-card-img'></i></span>
+                                    <span>  <img src="https://skillicons.dev/icons?i=css" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -326,7 +326,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">JavaScript</h3>
-                                    <span><i class='bx bxl-javascript skills-card-img'></i></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=javascript" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -336,7 +336,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">React</h3>
-                                    <span><i class='bx bxl-react skills-card-img'></i></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=react" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -346,7 +346,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Redux</h3>
-                                    <span><i class='bx bxl-redux skills-card-img'></i></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=redux" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -372,7 +372,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">VS Code</h3>
-                                    <span><i class='bx bxl-visual-studio skills-card-img'></i></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=vscode" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -382,27 +382,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">GitHub</h3>
-                                    <span><i class="uil uil-github-alt skills-card-img"></i></span>
-                                </div>
-                                <div class="skills_bar">
-                                    <span class="skills_percentage"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills_data skills-card">
-                                <div class="skills_titles">
-                                    <h3 class="skills_name skills-card-name"> Netlify </h3>
-                                    <span><i class='bx bxl-netlify skills-card-img'></i></span>
-                                </div>
-                                <div class="skills_bar">
-                                    <span class="skills_percentage"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills_data skills-card">
-                                <div class="skills_titles">
-                                    <h3 class="skills_name skills-card-name">CodePen</h3>
-                                    <span><i class='bx bxl-codepen skills-card-img'></i></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=github" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -412,22 +392,52 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Postman</h3>
-                                    <span></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=postman" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
                                 </div>
                             </div>
-                            
+
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
-                                    <h3 class="skills_name skills-card-name"> Render </h3>
-                                    <span></span>
+                                    <h3 class="skills_name skills-card-name"> Netlify </h3>
+                                    <span> <img src="https://skillicons.dev/icons?i=netlify" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
                                 </div>
                             </div>
+
+                            <div class="skills_data skills-card">
+                                <div class="skills_titles">
+                                    <h3 class="skills_name skills-card-name"> Vite </h3>
+                                    <span> <img src="https://skillicons.dev/icons?i=vite" /> </span>
+                                </div>
+                                <div class="skills_bar">
+                                    <span class="skills_percentage"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills_data skills-card">
+                                <div class="skills_titles">
+                                    <h3 class="skills_name skills-card-name"> Replit </h3>
+                                    <span> <img src="https://skillicons.dev/icons?i=replit" /> </span>
+                                </div>
+                                <div class="skills_bar">
+                                    <span class="skills_percentage"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills_data skills-card">
+                                <div class="skills_titles">
+                                    <h3 class="skills_name skills-card-name">CodePen</h3>
+                                    <span> <img src="https://skillicons.dev/icons?i=codepen" /> </span>
+                                </div>
+                                <div class="skills_bar">
+                                    <span class="skills_percentage"></span>
+                                </div>
+                            </div>   
 
                         </div>
                     </div>
@@ -452,7 +462,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Node.js</h3>
-                                    <span><i class='bx bxl-javascript skills-card-img'></i></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=nodejs" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -462,7 +472,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Express.js</h3>
-                                    <span><i class='bx bxl-javascript skills-card-img'></i></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=express" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -472,7 +482,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">MongoDB</h3>
-                                    <span><i class='bx bxl-mongodb skills-card-img'></i></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=mongodb" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -482,7 +492,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">NPM</h3>
-                                    <span></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=npm" /></span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -491,8 +501,8 @@
 
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
-                                    <h3 class="skills_name skills-card-name">Mongoose</h3>
-                                    <span></span>
+                                    <h3 class="skills_name skills-card-name"> RESTful API </h3>
+                                    <span> <img src="https://skillicons.dev/icons?i=restapi" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
@@ -516,7 +526,7 @@
                             <div class="skills_data skills-card">
                                 <div class="skills_titles">
                                     <h3 class="skills_name skills-card-name">Canva</h3>
-                                    <span></span>
+                                    <span> <img src="https://skillicons.dev/icons?i=canva" /> </span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage"></span>
