--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <span class="about_info-name">Hours of Coding</span>
                         </div>
                         <div>
-                            <span class="about_info-title">1</span>
+                            <span class="about_info-title">2</span>
                             <span class="about_info-name">Projects</span>
                         </div>
                         <div>
@@ -257,11 +257,11 @@
                             <div class="qualification_data">
 
                                 <div>
-                                    <h3 class="qualification_title"> Junior Manager </h3>
+                                    <h3 class="qualification_title"> Junior Sales Manager </h3>
                                     <span class="qualification_subtitle"> Ind Supply Corporation, Bhopal, Madhya Pradesh</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
-                                        [ Aug 2020 - Oct 2023 ]
+                                        [ Feb 2021 - May 2024 ]
                                     </div>
                                 </div>
                                 <div>
