--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
                 <img src="./Images/2.png" alt="" class="about_img home-img">
                 <div class="about_data">
 
-                    <p  class="about_description"  id="user-detail-intro">I am a Full Stack Web Developer skilled in MERN Stack with expertise in backend development using Express.js and related frameworks. Experienced in designing and maintaining high-quality server-side applications and RESTful APIs. Proficient in JavaScript, Node.js, Express.js, MongoDB and Git. Strong problem-solving skills along with a solid foundation in data structures and algorithms. Excellent communicator and collaborator with the ability to collaborate effectively with cross-functional teams. Proactive and self-driven, eager to contribute to a dynamic working environment. My journey includes an intensive 1200+ Hour Web Development program at Prepleaf by Masai School, where I honed my skills in frontend and backend development.   
+                    <p  class="about_description"  id="user-detail-intro">I am a Full Stack Web Developer skilled in MERN Stack with expertise in backend development using Express.js and related frameworks. Experienced in designing and maintaining high-quality server-side applications and RESTful APIs. 
+                        Proficient in JavaScript, Node.js, Express.js, MongoDB and Git. Strong problem-solving skills along with a solid foundation in data structures and algorithms. Excellent communicator and collaborator with the ability to collaborate effectively with cross-functional teams. 
+                        Proactive and self-driven, eager to contribute to a dynamic working environment. My journey includes an intensive 1200+ Hour Web Development program at Prepleaf by Masai School, where I honed my skills in frontend and backend development.   
                         I have a knack for implementing innovative solutions and thrive in collaborative environments. My meticulous attention to detail and passion for problem-solving are key drivers that set me apart in the field.🚀                 
                     </p>
                     <div class="about_info">
