--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     </li>
                     <li class="nav_item">
                         <button id="resume-button-1" class="nav-link resume">
-                            <a href="./Images/Anshul_Agrawal-Resume-FullStackWebDeveloper.pdf" class="button-flex" id="resume-link-1"
+                            <a href="./Images/AnshulAgrawal-NodeJSDeveloper.pdf" class="button-flex" id="resume-link-1"
                             onclick="window.open('https://drive.google.com/file/d/19HGR3I59nKI0q9JItUOL4p91iM6C54Z1/view?usp=sharing')"
-                            target="_blank" download="Anshul-Agrawal-FullStackWebDeveloper-Resume.pdf" >
+                            target="_blank" download="Anshul-Agrawal-NodeJSDeveloper-Resume.pdf" >
                                 <i class="uil uil-download-alt nav_icon"></i> Resume
                             </a>
                         </button>
@@ -553,7 +553,7 @@
                     <a href="https://pro-task-1qg4.onrender.com/" target="_blank"
                         class="project-github-link button button-flex button-small portfolio_button">
                         Backend Deployment Link
-                        <i class="uil uil-github-alt button_icon"></i>
+                        <i class="uil uil-external-link-alt button_icon"></i>
                     </a>
                     <adsa    
                       onclick="window.open('https://drive.google.com/drive/folders/1QzCJiwJuDryGjdAxcaUUOb9TjaL0UxYN?usp=sharing')"
