--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Images/head-logo.png" type="image/icon type">
-    <title>Anshul Agrawal || Portfolio</title>
+    <title> Anshul Agrawal || Portfolio </title>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/calendar.css" />
@@ -127,13 +127,9 @@
 
 
                     <div class="home_data">
-                        <h1 class="home_title" id="user-detail-name">Hi👋, I'm Anshul Agrawal</h1>
+                        <h1 class="home_title" id="user-detail-name"> Hi👋, I'm Anshul Agrawal </h1>
                         <h3 class="home_subtitle"><span class="auto-type"></span></h3>
-                        <p class="home_description">Highly passionate Full Stack Web Developer skilled in MERN Stack with expertise in backend development using Express.js 
-                            and related frameworks. Experienced in designing and maintaining high-quality server-side
-                            applications and RESTful APIs. Proficient in JavaScript, Node.js,
-                            MongoDB, Express.js, GIT. Strong problem-solving skills along with a solid foundation in data structures and
-                            algorithms. Excellent communicator and collaborator, eager to contribute to a dynamic working environment.✨</p>
+                        <p class="home_description">Highly skilled Node.js Developer adept in backend development using Express.js and related frameworks. Experienced in designing and maintaining high-performance server-side applications and RESTful APIs. Proficient in JavaScript, Node.js, Express.js, MongoDB, and Git, with a solid foundation in data structures and algorithms. Highly passionate about building robust, scalable solutions. Excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven.✨</p>
                         <div class="btn_container">
                             <a href="#contact" class="button button-flex sec_button">
                                 Connect with Me <i class="uil uil-message button_icon"></i>
